--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write './**/*.{js,ts,tsx,scss}'"
   },
   "dependencies": {
+    "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
@@ -28,6 +29,7 @@
     "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "stylelint": "^16.9.0",
     "stylelint-config-recess-order": "^5.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
